1.11
- Fixed toolbar button default size and style.
- Fixed expanding directories in dir tree.
- Changed compilation of app into a static build: everything is now in a single binary.

1.10
- Most of the code has been rewritten for easier maintaining and development.
	- Secondary goal is to fix compiling on Windows and OS/2.
- Changed the order of Processor dialog pages.
- Editing only a single field and saving changes instantly now works.

1.9
- Fixed displaying tags.
- Fixed saving disc number and track total.

1.8
- Docks and menubar now use the same context menu as the toolbar does.
- Added an option to the Settings menu for locking the interface.
- Added an option for hiding the statusbar.
- Added a 'minimal' UI that can be enabled by hiding the main toolbar.
- Added a button for navigating to parent directory.
- Combined reload and stop scan buttons.
- It's now possible to set a root directory in the directory tree.
- Introduced support for bookmarks.
- Split some of the code into libraries.

1.7
- Enabled reordering and enabling/disabling of columns in the main view.
- Text fields now scroll to the begin when changing editable track.
- Fixed a regression with renaming files and directories.
- Field processor dialog now remembers its size.
- Fixed "dimming background for subdirectories" sometimes being inaccurate.

1.6
- Fixed encoding setting being corrupted on startup.
- Hopefully fixed encoding problems with special (eg. Cyrillic) characters.
- Ogg Vorbis tags now use the official format for cover art.
	- Retained read only support for legacy ("EasyTag") covers. (A bit troublesome.)
- Remember to enable "convert legacy cover art" from the settings!
	- Disabled by default to not cause unpleasant surprises (legacy MP3 players or so?).

1.5
- Revised some code.
- CDDB track info can now be edited.
- Fixed bug that prevented applying CDDB data on tracks.

1.4
- Fixed selection problems in files list.