@@ -18,7 +18,7 @@ class MetaDataModel2 : public QAbstractItemModel {
 	Q_OBJECT
 
 	public:
-		enum DataRole { FieldTypeRole = Qt::UserRole };
+		enum DataRole { FieldTypeRole = Qt::UserRole + 1, FieldChangedRole = Qt::UserRole + 2 };
 		
 		MetaDataModel2(QObject * parent=0);
 
@@ -26,6 +26,9 @@ class MetaDataModel2 : public QAbstractItemModel {
 
 		bool recursive() const { return _recursive; }
 		QString directory() const { return _directory; }
+
+		void setInlineEdit(bool state) { _editInline = state; }
+		bool inlineEdit() const { return _editInline; }
 
 		MetaData metaData(int row) const;
 		
@@ -105,6 +108,7 @@ class MetaDataModel2 : public QAbstractItemModel {
 
 		bool _recursive;
 		bool _locked;
+		bool _editInline;
 
 		volatile bool _abortAction;
 };
